/**
 * This file was generated by kysely-codegen.
 * Please do not edit it manually.
 */

import type { ColumnType } from "kysely";

export type Generated<T> = T extends ColumnType<infer S, infer I, infer U>
  ? ColumnType<S, I | undefined, U>
  : ColumnType<T, T | undefined, T>;

export interface Devices {
  created_at: Generated<number>;
  disabled: Generated<number>;
  height: number;
  id: Generated<number>;
  image_ratio_delta_range: Generated<number>;
  max_image_filesize: Generated<number>;
  max_image_height: Generated<number>;
  max_image_width: Generated<number>;
  min_image_filesize: Generated<number>;
  min_image_height: Generated<number>;
  min_image_width: Generated<number>;
  name: Generated<string>;
  nsfw: Generated<number>;
  updated_at: Generated<number>;
  width: number;
}

export interface DevicesFts {
  name: string | null;
}

export interface DevicesFtsConfig {
  k: string;
  v: string | null;
}

export interface DevicesFtsData {
  block: Buffer | null;
  id: Generated<number | null>;
}

export interface DevicesFtsDocsize {
  id: Generated<number | null>;
  origin: number | null;
  sz: Buffer | null;
}

export interface DevicesFtsIdx {
  pgno: string | null;
  segid: string;
  term: string;
}

export interface DevicesSources {
  created_at: Generated<number>;
  device_id: number;
  source_id: number;
}

export interface Sources {
  created_at: Generated<number>;
  display_name: Generated<string>;
  id: Generated<number>;
  parameter: Generated<string>;
  source_id: string;
  updated_at: Generated<number>;
}

export interface SourcesFts {
  display_name: string | null;
  parameter: string | null;
  source_id: string | null;
}

export interface SourcesFtsConfig {
  k: string;
  v: string | null;
}

export interface SourcesFtsData {
  block: Buffer | null;
  id: Generated<number | null>;
}

export interface SourcesFtsDocsize {
  id: Generated<number | null>;
  origin: number | null;
  sz: Buffer | null;
}

export interface SourcesFtsIdx {
  pgno: string | null;
  segid: string;
  term: string;
}

export interface DB {
  devices: Devices;
  devices_fts: DevicesFts;
  devices_fts_config: DevicesFtsConfig;
  devices_fts_data: DevicesFtsData;
  devices_fts_docsize: DevicesFtsDocsize;
  devices_fts_idx: DevicesFtsIdx;
  devices_sources: DevicesSources;
  sources: Sources;
  sources_fts: SourcesFts;
  sources_fts_config: SourcesFtsConfig;
  sources_fts_data: SourcesFtsData;
  sources_fts_docsize: SourcesFtsDocsize;
  sources_fts_idx: SourcesFtsIdx;
}
